# Wordle-Bot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
function/: main.py
function/common/: algorithm.py
function/database/: database.py  guess_data.py  guess_history.py  models.py  user.py  word.py
